# CatPaw

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  catpaw.cpp  catpaw.h  catpaw.kcfg  catpaw_config.cpp  catpaw_config.h  catpaw_config.ui  catpawconfig.kcfgc  main.cpp  metadata.json
